fixed spacing

--- a/styles/synesthesia.css
+++ b/styles/synesthesia.css
@@ -42,20 +42,20 @@
 
 
 #syn-definition{
-    font-size: 60px;
-    line-height: 57px;
+    font-size: 62px;
+    line-height: 59px;
 }
 
 #page-description{
-    font-size: 58px;
-    line-height: 55px;
+    font-size: 59px;
+    line-height: 56px;
 }
 
 
 
 #grapheme{
-    font-size: 31px;
-    line-height: 26px;
+    font-size: 35px;
+    line-height: 32px;
 }
 
 #breakk{
@@ -64,8 +64,8 @@
 }
 
 #fake-colors, #fake-colors-link{
-    font-size: 28px;
-    line-height: 28px;
+    font-size: 29px;
+    line-height: 34px;
 }
 
 
